# jacobi

./: .gitignore  CMakeLists.txt  README.md  a  auxj.h  jacobi_paralelo.c  jacobi_paralelo.h  jacobi_sequencial.c  jacobi_sequencial.h  main.c  main.h  resultado_paralelo.txt  resultado_sequencial.txt
include/: header.h  jacobi_paralelo.h  jacobi_sequencial.h  parser.h
src/: jacobi_paralelo.c  jacobi_sequencial.c  parser.c
